# rust_play_file_upload_download

./: Cargo.toml
src/: main.rs
