[package]
name = "file-upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-multipart = "0.4.0"
futures = "0.3.23"
futures-util = "0.3.23"
imagesize = "0.10.0"
image = "0.24.3"